fixed the phone text overlap and sizing issue

--- a/styles-portrait.css
+++ b/styles-portrait.css
@@ -30,6 +30,16 @@ body {
   list-style: none;
   padding-top: 10px;
 }
+.social {
+  position: fixed;
+  display: flex;
+  padding-left: 2.5%;
+  bottom: 5px;
+}
+.social a {
+  text-decoration: none;
+  color: black;
+}
 .logo {
   font-weight: 900;
   display: flex;
@@ -93,11 +103,6 @@ body {
   padding-top: 20px;
 }
 
-.social {
-  position: fixed;
-  bottom: 0;
-}
-
 .icon {
   font-size: 30px;
   padding: 10px;
@@ -134,13 +139,20 @@ body {
   .social {
     display: flex;
     flex-direction: column;
+    align-items: left;
+    padding-left: 1%;
   }
   .main-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
+    height: 8%;
   }
   .main-nav li {
-    margin: 0 auto;
-    padding: 10px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
   }
 
   .navbar.active {
