--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,16 @@ body {
   list-style: none;
   padding-top: 10px;
 }
+.social {
+  position: fixed;
+  display: flex;
+  padding-left: 2.5%;
+  bottom: 5px;
+}
+.social a {
+  text-decoration: none;
+  color: black;
+}
 .logo {
   font-weight: 900;
   display: flex;
@@ -49,7 +59,6 @@ body {
 
   flex-direction: column;
   width: 70%;
-  height: 2700px;
 }
 .uno {
   display: flex;
@@ -89,11 +98,6 @@ body {
   padding-top: 20px;
 }
 
-.social {
-  position: fixed;
-  bottom: 0;
-}
-
 .icon {
   font-size: 30px;
   padding: 10px;
@@ -130,13 +134,19 @@ body {
   .social {
     display: flex;
     flex-direction: column;
+    align-items: left;
   }
   .main-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
+    height: 8%;
   }
   .main-nav li {
-    margin: 0 auto;
-    padding: 10px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
   }
 
   .navbar.active {
